code sprint 2 - batch processing functional

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -13,14 +13,7 @@
      "text": [
       "pandas\n",
       "numpy\n",
-      "matplotlib\n",
-      "sbn\n",
-      "os/sys\n",
-      "simpleitk\n",
-      "kmeans\n",
-      "here\n",
-      "CPU times: user 2.14 s, sys: 3.53 s, total: 5.67 s\n",
-      "Wall time: 5min 13s\n"
+      "matplotlib\n"
      ]
     }
    ],
