--- a/results.ipynb
+++ b/results.ipynb
@@ -9,7 +9,8 @@
     "import SimpleITK as sitk\n",
     "import os, sys\n",
     "sys.path.append('./workflow/libs/')\n",
-    "import utils"
+    "import utils\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -20,6 +21,413 @@
     "\n",
     "Tool for interacting with results on exahead "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>status</th>\n",
+       "      <th>core</th>\n",
+       "      <th>round</th>\n",
+       "      <th>color_channel</th>\n",
+       "      <th>path</th>\n",
+       "      <th>Unnamed: 0_x</th>\n",
+       "      <th>center_x</th>\n",
+       "      <th>center_y</th>\n",
+       "      <th>width</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>Unnamed: 0_y</th>\n",
+       "      <th>name</th>\n",
+       "      <th>jacaard_coef</th>\n",
+       "      <th>dice_coef</th>\n",
+       "      <th>volume_similarity</th>\n",
+       "      <th>false_neg_err</th>\n",
+       "      <th>false_pos_err</th>\n",
+       "      <th>hausdorff_dist</th>\n",
+       "      <th>registered_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>unregistered</td>\n",
+       "      <td>56</td>\n",
+       "      <td>R0</td>\n",
+       "      <td>c1</td>\n",
+       "      <td>unregistered_core=56_round=R0_color=c1.tif</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>314.0</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/home/exacloud/lustre1/NGSdev/evansna/cyclicIF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>unregistered</td>\n",
+       "      <td>56</td>\n",
+       "      <td>R1</td>\n",
+       "      <td>c3</td>\n",
+       "      <td>unregistered_core=56_round=R1_color=c3.tif</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/home/exacloud/lustre1/NGSdev/evansna/cyclicIF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>registered</td>\n",
+       "      <td>56</td>\n",
+       "      <td>R1</td>\n",
+       "      <td>c1</td>\n",
+       "      <td>registered_core=56_round=R1_color=c1.tif</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>311.0</td>\n",
+       "      <td>363.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>registered_core=56_round=R1_color=c1.tif</td>\n",
+       "      <td>0.631839</td>\n",
+       "      <td>0.774389</td>\n",
+       "      <td>-0.052407</td>\n",
+       "      <td>0.245384</td>\n",
+       "      <td>0.204773</td>\n",
+       "      <td>0.177183</td>\n",
+       "      <td>/home/exacloud/lustre1/NGSdev/evansna/cyclicIF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>registered</td>\n",
+       "      <td>56</td>\n",
+       "      <td>R2</td>\n",
+       "      <td>c3</td>\n",
+       "      <td>registered_core=56_round=R2_color=c3.tif</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/home/exacloud/lustre1/NGSdev/evansna/cyclicIF...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>unregistered</td>\n",
+       "      <td>56</td>\n",
+       "      <td>R1</td>\n",
+       "      <td>c5</td>\n",
+       "      <td>unregistered_core=56_round=R1_color=c5.tif</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>/home/exacloud/lustre1/NGSdev/evansna/cyclicIF...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0        status  core round color_channel  \\\n",
+       "0           0  unregistered    56    R0            c1   \n",
+       "1           1  unregistered    56    R1            c3   \n",
+       "2           2    registered    56    R1            c1   \n",
+       "3           3    registered    56    R2            c3   \n",
+       "4           4  unregistered    56    R1            c5   \n",
+       "\n",
+       "                                         path  Unnamed: 0_x  center_x  \\\n",
+       "0  unregistered_core=56_round=R0_color=c1.tif          55.0     314.0   \n",
+       "1  unregistered_core=56_round=R1_color=c3.tif           NaN       NaN   \n",
+       "2    registered_core=56_round=R1_color=c1.tif         221.0     311.0   \n",
+       "3    registered_core=56_round=R2_color=c3.tif           NaN       NaN   \n",
+       "4  unregistered_core=56_round=R1_color=c5.tif           NaN       NaN   \n",
+       "\n",
+       "   center_y  width  ...  cluster  Unnamed: 0_y  \\\n",
+       "0     338.0   95.0  ...     56.0           NaN   \n",
+       "1       NaN    NaN  ...      NaN           NaN   \n",
+       "2     363.0   88.0  ...     56.0           0.0   \n",
+       "3       NaN    NaN  ...      NaN           NaN   \n",
+       "4       NaN    NaN  ...      NaN           NaN   \n",
+       "\n",
+       "                                       name  jacaard_coef  dice_coef  \\\n",
+       "0                                       NaN           NaN        NaN   \n",
+       "1                                       NaN           NaN        NaN   \n",
+       "2  registered_core=56_round=R1_color=c1.tif      0.631839   0.774389   \n",
+       "3                                       NaN           NaN        NaN   \n",
+       "4                                       NaN           NaN        NaN   \n",
+       "\n",
+       "   volume_similarity  false_neg_err  false_pos_err  hausdorff_dist  \\\n",
+       "0                NaN            NaN            NaN             NaN   \n",
+       "1                NaN            NaN            NaN             NaN   \n",
+       "2          -0.052407       0.245384       0.204773        0.177183   \n",
+       "3                NaN            NaN            NaN             NaN   \n",
+       "4                NaN            NaN            NaN             NaN   \n",
+       "\n",
+       "                                     registered_path  \n",
+       "0  /home/exacloud/lustre1/NGSdev/evansna/cyclicIF...  \n",
+       "1  /home/exacloud/lustre1/NGSdev/evansna/cyclicIF...  \n",
+       "2  /home/exacloud/lustre1/NGSdev/evansna/cyclicIF...  \n",
+       "3  /home/exacloud/lustre1/NGSdev/evansna/cyclicIF...  \n",
+       "4  /home/exacloud/lustre1/NGSdev/evansna/cyclicIF...  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = pd.read_csv('/home/exacloud/lustre1/NGSdev/evansna/cyclicIF/output/aggregated_results.csv')\n",
+    "res.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'status', 'core', 'round', 'color_channel', 'path',\n",
+       "       'Unnamed: 0_x', 'center_x', 'center_y', 'width', 'height',\n",
+       "       'Volume (nm^3)', 'Elongation', 'Flatness',\n",
+       "       'Oriented Bounding Box Minimum Size(nm)',\n",
+       "       'Oriented Bounding Box Maximum Size(nm)', 'Intensity Mean',\n",
+       "       'Intensity Standard Deviation', 'Intensity Skewness', 'component',\n",
+       "       'img_name', 'protein', 'slide_name', 'date', 'scan_id', 'scene', 'note',\n",
+       "       'file_type', 'original', 'cluster', 'Unnamed: 0_y', 'name',\n",
+       "       'jacaard_coef', 'dice_coef', 'volume_similarity', 'false_neg_err',\n",
+       "       'false_pos_err', 'hausdorff_dist', 'registered_path'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>status</th>\n",
+       "      <th>core</th>\n",
+       "      <th>round</th>\n",
+       "      <th>color_channel</th>\n",
+       "      <th>path</th>\n",
+       "      <th>Unnamed: 0_x</th>\n",
+       "      <th>center_x</th>\n",
+       "      <th>center_y</th>\n",
+       "      <th>width</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>Unnamed: 0_y</th>\n",
+       "      <th>name</th>\n",
+       "      <th>jacaard_coef</th>\n",
+       "      <th>dice_coef</th>\n",
+       "      <th>volume_similarity</th>\n",
+       "      <th>false_neg_err</th>\n",
+       "      <th>false_pos_err</th>\n",
+       "      <th>hausdorff_dist</th>\n",
+       "      <th>registered_path</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>slide_name</th>\n",
+       "      <th>scene</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>S3</th>\n",
+       "      <th>Scene-1</th>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>392</td>\n",
+       "      <td>...</td>\n",
+       "      <td>392</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>156</td>\n",
+       "      <td>392</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Unnamed: 0  status  core  round  color_channel  path  \\\n",
+       "slide_name scene                                                           \n",
+       "S3         Scene-1         392     392   392    392            392   392   \n",
+       "\n",
+       "                    Unnamed: 0_x  center_x  center_y  width  ...  cluster  \\\n",
+       "slide_name scene                                             ...            \n",
+       "S3         Scene-1           392       392       392    392  ...      392   \n",
+       "\n",
+       "                    Unnamed: 0_y  name  jacaard_coef  dice_coef  \\\n",
+       "slide_name scene                                                  \n",
+       "S3         Scene-1           156   156           156        156   \n",
+       "\n",
+       "                    volume_similarity  false_neg_err  false_pos_err  \\\n",
+       "slide_name scene                                                      \n",
+       "S3         Scene-1                156            156            156   \n",
+       "\n",
+       "                    hausdorff_dist  registered_path  \n",
+       "slide_name scene                                     \n",
+       "S3         Scene-1             156              392  \n",
+       "\n",
+       "[1 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.groupby(['slide_name', 'scene']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
