tested restitch_cores.py and restitch_cores_batch.sh - manual QC via json works. Close issue #16

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -11,8 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "pandas\n",
       "numpy\n",
       "matplotlib\n",
@@ -20,8 +18,8 @@
       "os/sys\n",
       "simpleitk\n",
       "here\n",
-      "CPU times: user 0 ns, sys: 2.9 ms, total: 2.9 ms\n",
-      "Wall time: 2.61 ms\n"
+      "CPU times: user 1.21 s, sys: 941 ms, total: 2.15 s\n",
+      "Wall time: 8.9 s\n"
      ]
     }
    ],
